# mina-zkml

./: .gitignore  .npmignore  Cargo.toml  HALO2_KIMCHI.md  README.md  ROADMAP.md  crates.js  help.html  jest.config.ts  package-lock.json  package.json  search-index.js  settings.html  src-files.js  test_model.json  tsconfig.json
.github/workflows/: deploy.yml  push_test.yml
examples/: mnist_inference.rs  perceptron.rs  verifier_serialization.rs  zk_conv.rs  zk_conv_maxpool.rs  zk_inference.rs  zk_inference_fail.rs  zk_inference_private.rs  zk_inference_private_inputs_proof_only.rs  zk_inference_public_input_private_output.rs  zk_kmeans.rs  zk_lenet.rs  zk_logistic_regression.rs  zk_mnist.rs  zk_simple_cnn.rs  zk_toy_deconv_leaky.rs
examples/notebooks/: linear_regression.ipynb  kmeans.ipynb  lenet.ipynb  linear_regression_e2e.ipynb  logistic_regression.ipynb
mina_zkml/: all.html  index.html  sidebar-items.js
mina_zkml/graph/: index.html  sidebar-items.js
mina_zkml/graph/errors/: enum.GraphError.html  index.html  sidebar-items.js
mina_zkml/graph/model/: enum.InputMapping.html  enum.NodeType.html  enum.OperationType.html  enum.OutputMapping.html  enum.Visibility.html  index.html  sidebar-items.js  struct.Model.html  struct.ParsedNodes.html  struct.RunArgs.html  struct.SerializableNode.html  struct.SerializableOutletId.html  struct.VarVisibility.html  type.GraphLoadResult.html  type.Outlet.html
mina_zkml/graph/scales/: fn.from_multipliers.html  fn.multiplier_to_scale.html  fn.scale_to_multiplier.html  index.html  sidebar-items.js  struct.Scale.html  struct.VarScales.html
mina_zkml/graph/tract_integration/: index.html  sidebar-items.js
mina_zkml/graph/utilities/: fn.create_add_axis_node.html  fn.create_const_node.html  fn.create_conv_node.html  fn.create_elementwise_node.html  fn.create_gather_node.html  fn.create_input_node.html  fn.create_max_pool_node.html  fn.create_node.html  fn.create_reduce_node.html  fn.create_softmax_node.html  fn.create_typedbin_node.html  fn.get_value_from_attributes.html  fn.handle_pool_spec.html  fn.node_output_shapes.html  index.html  sidebar-items.js
mina_zkml/zk/: index.html  sidebar-items.js  type.ZkOpeningProof.html
mina_zkml/zk/operations/: enum.OnnxOperation.html  fn.identify_operation.html  fn.identify_tract_operation.html  index.html  sidebar-items.js
mina_zkml/zk/proof/: index.html  sidebar-items.js  struct.ProverOutput.html  struct.ProverSystem.html  struct.VerifierSystem.html
mina_zkml/zk/wiring/: constant.COLUMNS.html  constant.MIN_DOMAIN_SIZE.html  constant.PERMUTS.html  constant.WIRES.html  index.html  sidebar-items.js  struct.ModelCircuitBuilder.html
mina_zkml_cli/: all.html  enum.Commands.html  fn.deserialize_prover_output.html  fn.main.html  fn.parse_visibility.html  fn.serialize_prover_output.html  fn.validate_input_json.html  index.html  sidebar-items.js  struct.Cli.html
models/: cardionetv2uno.onnx  kmeans.onnx  lenet.onnx  logistic_regression.onnx  mnist_mlp.onnx  simple_perceptron.onnx  smol-llm.onnx  toy_deconv_leaky.onnx
search.desc/mina_zkml/: mina_zkml-desc-0-.js
search.desc/mina_zkml_cli/: mina_zkml_cli-desc-0-.js
src/: example.ts  lib.rs  main.rs  wasm.rs  zkml.ts
src/graph/: errors.rs  mod.rs  model.rs  node.rs  scales.rs  tract_integration.rs  utilities.rs
src/graph/tests/: convolution.rs  convolution_tests.rs  gather.rs  max_pool.rs  mod.rs  model_advanced_tests.rs  model_tests.rs  reduce.rs  reduce_argmax.rs  reduce_max_arg.rs  scales_tests.rs  softmax.rs  typed_bin.rs  typed_bin_op.rs  utilities_tests.rs
src/graph/tract_integration/: functions.rs  mod.rs  types.rs
src/mina_zkml/: lib.rs.html
src/mina_zkml/graph/: errors.rs.html  mod.rs.html  model.rs.html  scales.rs.html  utilities.rs.html
src/mina_zkml/zk/: mod.rs.html  operations.rs.html  proof.rs.html  wiring.rs.html
src/mina_zkml_cli/: cli.rs.html
src/zk/: mod.rs  operations.rs  proof.rs  wiring.rs
tests/: cli_tests.rs  integration_tests.rs  zkml_verification.test.ts
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  (+1 more)
type.impl/std/: primitive.tuple.js
(+30 files in other folders)
