[package]
name = "onnx-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "kimchi"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.90"
bincode = "1.3"
image = "0.25.4"
instant = "0.1.13"
log = "0.4.22"
ndarray = "0.15.4"
scale = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
tract-onnx = { git = "https://github.com/sonos/tract/", rev = "40c64319291184814d9fea5fdf4fa16f5a4f7116", default-features = false }
