[package]
name = "mina-zkml"
version = "0.1.0"
edition = "2021"

[lib]
name = "mina_zkml"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mina-zkml-cli"
path = "src/bin/cli.rs"

[[example]]
name = "perceptron"
path = "examples/perceptron.rs"

[[example]]
name = "mnist_inference"
path = "examples/mnist_inference.rs"

[[example]]
name = "zk_inference"
path = "examples/zk_inference.rs"

[dependencies]
anyhow = "1.0.90"
bincode = "1.3"
image = "0.24.7"
instant = "0.1.13"
log = "0.4.22"
ndarray = "0.15.4"
scale = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
tract-onnx = { git = "https://github.com/sonos/tract/", rev = "40c64319291184814d9fea5fdf4fa16f5a4f7116", default-features = false }
kimchi = { git = "https://github.com/o1-labs/proof-systems", package = "kimchi" }
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-ec = "0.4.0"
mina-curves = { git = "https://github.com/o1-labs/proof-systems" }
chrono = "0.4.38"
rand = "0.8.5"
groupmap = { git = "https://github.com/o1-labs/proof-systems" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems" }
clap = { version = "4.5.1", features = ["derive"] }
prettytable-rs = "0.10.0"
md5 = "0.7.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
rstest = "0.18.2"

[features]
default = []
test-utils = []
